// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom scalar generation using casual should generate custom scalars for native and custom types 1`] = `
"
export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : 82,
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : 'ea corrupti qui incidunt eius consequatur blanditiis',
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'Kelly_Cremin@Turcotte.biz',
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : -93,
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : -24.509902694262564,
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};

export const aC = (overrides?: Partial<C>): C => {
    return {
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'Gianni_Kutch@hotmail.com',
    };
};
"
`;

exports[`Custom scalar generation using casual should generate dynamic custom scalars for native and custom types 1`] = `
"import casual from 'casual';

casual.seed(0);

export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : casual['integer'](...[1,100]),
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : casual['string'],
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : casual['email'],
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : casual['integer'](...[-100,0]),
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : casual['double'](...[-100,0]),
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};

export const aC = (overrides?: Partial<C>): C => {
    return {
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : casual['email'],
    };
};

export const seedMocks = (seed: number) => casual.seed(seed);
"
`;

exports[`Custom scalar generation using casual with different input/output configurations should generate distinct custom scalars for native and custom input/output types 1`] = `
"
export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : 82,
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : 'ea corrupti qui incidunt eius consequatur blanditiis',
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'Kelly_Cremin@Turcotte.biz',
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : -93,
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : -24.509902694262564,
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};

export const aC = (overrides?: Partial<C>): C => {
    return {
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'itaque distinctio iure molestias voluptas reprehenderit quos',
    };
};
"
`;

exports[`Custom scalar generation using casual with different input/output configurations should generate distinct dynamic custom scalars for native and custom types 1`] = `
"import casual from 'casual';

casual.seed(0);

export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : casual['integer'](...[1,100]),
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : casual['string'],
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : casual['email'],
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : casual['integer'](...[-100,0]),
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : casual['double'](...[-100,0]),
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};

export const aC = (overrides?: Partial<C>): C => {
    return {
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : casual['string'],
    };
};

export const seedMocks = (seed: number) => casual.seed(seed);
"
`;

exports[`custom scalar generation using faker should generate custom scalars for native and custom types 1`] = `
"
export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : 83,
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : 'Depereo nulla calco blanditiis cornu defetiscor.',
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'Orlando_Cremin@gmail.com',
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : -93,
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : -24.51,
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};

export const aC = (overrides?: Partial<C>): C => {
    return {
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : 'Maia49@hotmail.com',
    };
};
"
`;

exports[`custom scalar generation using faker should generate dynamic custom scalars for native and custom types 1`] = `
"import { fakerEN as faker } from '@faker-js/faker';

faker.seed(0);

export const anA = (overrides?: Partial<A>): A => {
    return {
        id: overrides && overrides.hasOwnProperty('id') ? overrides.id! : faker['number']['int'](...[{\\"min\\":1,\\"max\\":100}]),
        str: overrides && overrides.hasOwnProperty('str') ? overrides.str! : faker['lorem']['sentence'](),
        obj: overrides && overrides.hasOwnProperty('obj') ? overrides.obj! : aB(),
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : faker['internet']['email'](),
    };
};

export const aB = (overrides?: Partial<B>): B => {
    return {
        int: overrides && overrides.hasOwnProperty('int') ? overrides.int! : faker['number']['int'](...[{\\"min\\":-100,\\"max\\":0}]),
        flt: overrides && overrides.hasOwnProperty('flt') ? overrides.flt! : faker['number']['float'](...[{\\"min\\":-100,\\"max\\":0}]),
        bool: overrides && overrides.hasOwnProperty('bool') ? overrides.bool! : false,
    };
};

export const aC = (overrides?: Partial<C>): C => {
    return {
        anyObject: overrides && overrides.hasOwnProperty('anyObject') ? overrides.anyObject! : faker['internet']['email'](),
    };
};

export const seedMocks = (seed: number) => faker.seed(seed);
"
`;
